[package]
name = "locksmith"
version = "0.1.0"
authors = ["Fu Wang <wangfu91@hotmail.com>"]
description = "A Windows utility to find processes locking your files"
repository = "https://github.com/wangfu91/locksmith"
license = "MIT OR Apache-2.0"
keywords = ["windows", "utility", "file-locks", "process"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
log = "0.4.25"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Wdk_Foundation",
    "Win32_System_Threading",
    "Wdk_System",
    "Wdk_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_Security",
]
